<?xml version="1.0" encoding="UTF-8"?>
<!--
~ Copyright (c) 2020 Broadcom.
~
~ The term "Broadcom" refers to Broadcom Inc. and/or its subsidiaries.
~
~ This program and the accompanying materials are made
~ available under the terms of the Eclipse Public License 2.0
~ which is available at https://www.eclipse.org/legal/epl-2.0/
~
~ SPDX-License-Identifier: EPL-2.0
~
~ Contributors:
~ Broadcom, Inc. - initial API and implementation
~
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ca.lsp</groupId>
  <artifactId>com.ca.lsp.cobol</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <name>COBOL LSP :: Parent pom</name>

    <modules>
        <module>lsp-service-cobol</module>
        <module>lsp-core-cobol-parser</module>
        <module>lsp-core-domain</module>
    </modules>

    <properties>
        <revision>0.13.0+NEXT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
        <lsp4j.version>0.5.0</lsp4j.version>
        <antlr.version>4.7.1</antlr.version>
        <guice.version>4.2.2</guice.version>
        <google.guava.version>28.1-jre</google.guava.version>
        <commons.lang.version>3.9</commons.lang.version>
        <commons.io.version>2.5</commons.io.version>
        <commons.text.version>1.6</commons.text.version>
        <lombok.version>1.18.10</lombok.version>
        <junit-jupiter.version>5.6.0</junit-jupiter.version>
        <junit.platform.version>1.6.0</junit.platform.version>
        <junit.platform.version>1.5.2</junit.platform.version>
        <mockito.core.version>2.23.0</mockito.core.version>
        <concurrentunit.version>0.4.6</concurrentunit.version>
        <awaitility.version>3.0.0</awaitility.version>
        <slf4j.api.version>1.7.25</slf4j.api.version>
        <logback.classic.version>1.2.3</logback.classic.version>
        <java.version>11</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guice.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-assistedinject</artifactId>
            <version>${guice.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${google.guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons.text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.jodah</groupId>
            <artifactId>concurrentunit</artifactId>
            <version>${concurrentunit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.api.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.classic.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.lsp4j</groupId>
                <artifactId>org.eclipse.lsp4j</artifactId>
                <version>${lsp4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.lsp4j</groupId>
                <artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
                <version>${lsp4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ca.lsp</groupId>
                <artifactId>lsp-core-cobol-parser</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.ca.lsp</groupId>
                <artifactId>lsp-core-domain</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4</artifactId>
                <version>${antlr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>${argLine} -Xmx8192m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>cobertura</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

</project>
